--- a/source/Android_UEFIInstaller/MainWindow.xaml
+++ b/source/Android_UEFIInstaller/MainWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="466" Width="650" Loaded="Window_Loaded" ResizeMode="NoResize">
     <Grid>
-        <Button Name="cmdInstall" Content="Install Android" HorizontalAlignment="Left" Margin="427,116,0,0" VerticalAlignment="Top" Width="205" Click="Button_Click" IsEnabled="True"/>
-        <Button Name="cmdRemove" Content="Cleanup Android" HorizontalAlignment="Left" VerticalAlignment="Top" Width="205" Click="Button_Click_1" Margin="427,141,0,0"/>
+        <Button Name="cmdInstall" Content="Install Bliss" HorizontalAlignment="Left" Margin="427,116,0,0" VerticalAlignment="Top" Width="205" Click="Button_Click" IsEnabled="True"/>
+        <Button Name="cmdRemove" Content="Cleanup Bliss" HorizontalAlignment="Left" VerticalAlignment="Top" Width="205" Click="Button_Click_1" Margin="427,141,0,0"/>
         <TextBox Name="txtlog" HorizontalAlignment="Left" Height="232" Margin="10,193,0,0" Text="" VerticalAlignment="Top" Width="622" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" IsReadOnly="True"/>
-        <Label Content="Android x86 Installer - Beta 2.5 UEFI Version" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.763,-0.077"/>
-        <Label Content="WARNING: This version is beta and still has alot to fix, its for testing only" Foreground="Red" HorizontalAlignment="Left" Margin="10,36,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.763,-0.077"/>
+        <Label Content="Bliss-x86 Installer - Easy UEFI Version" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.763,-0.077"/>
+        <Label Content="WARNING: This installer can damage your device if used incorrectly" Foreground="Red" HorizontalAlignment="Left" Margin="10,36,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.763,-0.077"/>
         <Button Content="Browse" HorizontalAlignment="Left" Margin="251,116,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
         <TextBox Name="txtISOPath" HorizontalAlignment="Left" Height="23" Margin="69,113,0,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Width="163" IsReadOnly="True" AcceptsReturn="False" MaxLines="1" />
         <ComboBox Name="cboSize" HorizontalAlignment="Left" Margin="69,141,0,0" VerticalAlignment="Top" Width="163" Height="23" Text="4000k">
